# hubble_tension

./: .dockerignore  .gitignore  README.md  SCANNED_PAPERS.md  hubble_tension.sh  pyproject.toml
.docdex/: run-tests.json
.github/workflows/: ci.yml
categories/: 01_early_universe_pre_recombination.md  02_late_universe_dark_energy_modified_gravity.md  03_distance_ladder_calibration_systematics.md  04_independent_late_universe_h0_probes.md  05_local_inhomogeneity_light_propagation.md  06_inverse_distance_ladder_bao_expansion_history.md  07_growth_s8_lensing_clusters_cmb_lensing.md  08_reviews_comparisons_no_go.md  README.md  _coverage.md
config/: budgets.yaml  lab_head.yaml  solvers.yaml
papers/: README.md
prompts/: code_generation.md  concept_forge.md  formula.md  lab_head.md  reporting.md  reviewer.md
src/hubble_tension/: __init__.py  __main__.py  cli.py  policy.py
src/hubble_tension/adversarial/: __init__.py  checks.py
src/hubble_tension/corpus/: __init__.py  (+2 more)
tests/: test_adversarial.py  test_compressed_obs.py  test_concept_forge.py  test_config.py  test_corpus_import.py  test_formula_sandbox.py  test_gitignore.py  test_lab_agents.py  test_launcher.py  test_operations.py  test_package_layout.py  test_paper_study.py  test_policy.py  test_reality_checks.py  test_release_readiness.py  test_replication.py  test_runtime_supervisor.py  test_schemas.py  test_solvers.py  test_state_store.py  test_stub_lab_loop.py  test_tuning.py
tests/fixtures/: fake_hypothesis.json  fake_paper.json  fake_stable_candidate.json
tools/: Containerfile.solvers  build_solvers.sh
(+66 files in other folders)
